fix 'dark mode' bug

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -300,7 +300,7 @@
   --border-color: #d1d5db80;
 }
 
-[data-theme=dark] {
+/* [data-theme=dark] {
   --button-secondary: var(--primary-800-2);
   --black: var(--base);
   --white: var(--dark-2);
@@ -331,7 +331,7 @@
   --neutral-700: #EBECEF;
   --neutral-800: #F3F4F6;
   --neutral-900: #F5F6FA;
-}
+} */
 
 /* === reset css start === */
 /* === reset css start === */
@@ -3352,7 +3352,7 @@ th {
   background: var(--gradients-Colors-gradients-2, linear-gradient(90deg, #F7E9FF 0.12%, #FDF8F7 99.89%));
 }
 
-html[data-theme=dark] .bg-base-50 {
+/* html[data-theme=dark] .bg-base-50 {
   background-color: rgba(255, 255, 255, 0.1) !important;
 }
 
@@ -3438,7 +3438,7 @@ html[data-theme=dark] .bg-white-gradient-light {
 
 html[data-theme=dark] .bg-light-pink {
   background: var(--gradients-Colors-gradients-2, linear-gradient(90deg, rgba(247, 233, 255, 0.1) 0.12%, rgba(253, 248, 247, 0.05) 99.89%));
-}
+} */
 
 .bg-gradient-blue-warning {
   background: linear-gradient(90deg, #CBFFF9 0%, #FFEEB1 100%);
